--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,30 @@
+#services:
+#  mysql:
+#    image: mysql:8.0.33
+#    container_name: mysql-container
+#    environment:
+#        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+#        MYSQL_DATABASE: ${MYSQL_DATABASE}
+##      MYSQL_ROOT_PASSWORD: 7164
+##      MYSQL_DATABASE: testdb
+#    volumes:
+#      - ./db/data:/var/lib/mysql
+#      - ./db/initdb.d:/docker-entrypoint-initdb.d
+#    ports:
+#      - "3307:3306"  # 로컬 3306 포트가 사용 중일 경우를 대비해 3307로 매핑
+
 services:
   mysql:
     image: mysql:8.0.33
     container_name: mysql-container
     environment:
-        MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
-        MYSQL_DATABASE: ${MYSQL_DATABASE}
-#      MYSQL_ROOT_PASSWORD: 7164
-#      MYSQL_DATABASE: testdb
+      LANG: C.UTF-8
+      MYSQL_CHARSET: utf8mb4
+      MYSQL_COLLATION: utf8mb4_unicode_ci
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+      MYSQL_DATABASE: ${MYSQL_DATABASE}
     volumes:
       - ./db/data:/var/lib/mysql
       - ./db/initdb.d:/docker-entrypoint-initdb.d
     ports:
-      - "3307:3306"  # 로컬 3306 포트가 사용 중일 경우를 대비해 3307로 매핑
+      - "3307:3306"
