--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     container_name: mysql-container
     environment:
       LANG: C.UTF-8
+      TZ: Asia/Seoul
       MYSQL_CHARSET: utf8mb4
       MYSQL_COLLATION: utf8mb4_unicode_ci
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
