--- a/.gitignore
+++ b/.gitignore
@@ -47,7 +47,7 @@ build/
 .DS_Store
 
 ### MySQL Docker 데이터 볼륨 ###
-shoppingmall/db/data/
+db/data/
 
 ### MySQL 초기화 스크립트 디렉토리는 제외하지 않음 ###
-!shoppingmall/db/initdb.d/
+!db/initdb.d/
