--- a/pom.xml
+++ b/pom.xml
@@ -227,6 +227,20 @@
       <artifactId>jackson-annotations</artifactId>
       <version>2.18.2</version>
     </dependency>
+
+    <!-- Bean Validation API -->
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>2.0.1.Final</version>
+    </dependency>
+
+    <!-- Hibernate Validator: 구현체 -->
+    <dependency>
+      <groupId>org.hibernate.validator</groupId>
+      <artifactId>hibernate-validator</artifactId>
+      <version>6.0.13.Final</version>
+    </dependency>
   </dependencies>
 
   <build>
